# hyper_butterfly

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  CMakeLists.txt.old  Cargo.toml  Dockerfile  LICENSE  README.md  build.py  build.rs  docker-compose.yml  install.sh  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  rules.mdc  rustfmt.toml  setup.py
.cargo/: config.toml
.cursor/rules/: rules.mdc
compressed_rbe_model/: config.json  rbe_seeds.pt  tokenizer_config.json
docs/: Hb__bert_short.ipynb  README.md
docs/advanced/: dynamic_curvature.md
docs/developer_manual/: 00_introduction.md  01_setup_environment.md  02_architecture.md  03_adding_new_layers.md  04_coding_style.md  05_testing.md  06_implementing_bitfield_inference.md  reality_stone_layers.md  refactoring_plan.md
docs/layers/: klein.md  lorentz.md  poincare_ball.md
docs/ops/: klein.md  lorentz.md  mobius.md
docs/paper/: 00_Abstract.md  01_Introduction.md  02_Background.md  03_Methodology.md  03a_Bitfield_Methodology.md  03b_Advanced_Bitfield_Implementation.md  03c_Complete_Bitfield_Implementation.md  04_Theoretical_Analysis.md  05_System_Architecture.md  06_Experiments.md  07_Conclusion.md  08_Optimization_Proofs.md  09_Dynamic_Curvature.md  09_bit_jacobian.md  10_AGI.md  11_AGI2.md  Appendix.md  curvature_computation_analysis.md  dynamic_curvature_implementation_analysis.md  experiment_analysis_poincare_ball.md  hippo.md  mathematical_foundations_summary.md  new.md  optimizations.md  plus.md  reality_stone_optimizations.md  system_architecture_analysis.md
docs/rbe/: 00_초록.md  01_Types.md  02_Encoding.md  03_Decoding.md  04_Generation.md  05_Math.md  06_Matrix.md  07_Layer_Compression_Ideas.md
docs/user_manual/: 00_introduction.md  01_getting_started.md  03_examples.md  04_mathematical_background.md
docs/user_manual/api_reference/: README.md
docs/user_manual/api_reference/core/: utilities.md
docs/user_manual/api_reference/layers/: klein.md  lorentz.md  poincare_ball.md
docs/user_manual/api_reference/ops/: klein_ops.md  lorentz_ops.md  mobius_ops.md
examples/: 08_simple_advanced_compression.py  09_adaptive_compression.py  10_extreme_compression_with_accuracy.py  11_final_compression_test.py  12_optimized_compression.py  14_helgason_lossless_compression.py  17_fast_helgason.py  21_reality_stone_single_compression.py  compressed_spectral_poincare.py  copy_llm.py  fft_helgason copy.py  fft_helgason.py  fft_helgason_fixed.py  fftsvd.py  fftsvds.py  final_comparison.py  fixed_spline_compression.py  helgason.py  large_model_compression.py  mixing_fft.py  mnist_mlp_test.py  no_deepcopy_version.py  optimized_poincare_gpt.py  poincare_copied copy 2.py  poincare_copied.py  precise_memory_test.py  quick_test.py  riemann_learning_fixed.py  riemann_linear_transform.py  simple_optimized.py  single_layer_optimized.py  spline_compression.py  test_conv1d.py  test_curve.py  test_dynamic_curvature.py
notebooks/: poincare_ball_verification.py
python/: __init__.py  advanced.py  layers.py  optimizations.py
python/reality_stone/: __init__.py  advanced.py  bitfield_cuda.cpp  conversion.py  layers.py  manifolds.py
python/reality_stone/advanced_modules/: __init__.py  compression.py  spectral.py
python/reality_stone/core/: __init__.py  mobius.py  ops.py  poincare.py  tensors.py
python/reality_stone/layers/: __init__.py  base.py  bitfield.py  klein.py  lorentz.py  poincare.py  poincare_embedding.py  rbe.py  spline.py
python/reality_stone/models/: __init__.py  hyperbolic_nn.py
python/reality_stone/optimizations/: __init__.py  config.py  memory.py
src/: extension.cpp  lib.rs
src/bindings/: bitfield.rs  klein.rs  lorentz.rs  macros.rs  mobius.rs  mod.rs  poincare.rs  rbe.rs  spline.rs
src/bitfield/: adaptive.rs  basis.rs  block_compression.rs  decoder.rs  jacobian.rs  kernel.rs  mod.rs  ops.rs  pipeline.rs  riemannian.rs  unified_tables.rs
src/bitfield/__test__/: jacobian_cuda_test.rs  jacobian_test.rs  mod.rs  riemannian_test.rs
src/bitfield/cuda/: jacobian.cu  riemannian.cu
src/core/advanced/chebyshev/: chebyshev.cpp  chebyshev_cuda.cu
src/core/advanced/compression/: __init__.py  hybrid_compression.h
src/core/advanced/dynamic_curvature/: dynamic_curvature.cpp  dynamic_curvature_cuda.cu
src/core/advanced/hyperbolic_fft/: hyperbolic_fft.cpp  hyperbolic_fft_cuda.cu
src/core/advanced/laplace_beltrami/: laplace_beltrami_cuda.cu
src/core/advanced/regularization/: hyperbolic_regularization_cpu.cpp  hyperbolic_regularization_cuda.cu
src/core/layers/: poincare_ball_backward_cuda.cu  poincare_ball_forward_cpu.cpp  poincare_ball_forward_cuda.cu
src/core/ops/: mobius_cpu.cpp  mobius_cuda.cu
src/include/config/: constant.h
src/include/utils/: numeric_safety.h
src/layers/: klein.rs  lorentz.rs  mobius.rs  mod.rs  poincare.rs  spline.rs  utils.rs
src/layers/bitfield/: basis.rs  decoder.rs  kernel.rs  mod.rs  ops.rs
src/layers/cuda/: bitfield.cu  ffi.rs  spline_kernel.cu
src/ops/: batch.rs  curvature.rs  klein.rs  lorentz.rs  mobius.rs  mod.rs  poincare.rs  project.rs  utils.rs
src/ops/cuda/: klein.cu  lorentz.cu  mobius.cu  poincare.cu
src/rbe/: decoder.rs  encoder.rs  generator.rs  main.rs  math.rs  matrix.rs  mod.rs  types.rs
src/rbe/tests/: decoding_test.rs  deep_compress_test.rs  encoding_test.rs  generation_test.rs  integration_test.rs  math_test.rs  matrix_test.rs
src/reality_stone/: optimizations.py
src/utils/: mod.rs
tests/: bitfield.py  bitfield_3d.py  comprehensive_test.py  compress_bitfield.py  equal.py  equivalent_poincare_test.py  full_model_comparison copy.py  gpt2_compress.py  lorentz.py  mnist_test.py  multifield.py  poincare_conversion.py  rbe.py  run_all_tests.py  spline.py  splines.py  tempCodeRunnerFile.py  test copy 2.py  test copy.py  test.py  test_dynamic_curve.py  test_dynamic_curve_ex.py  test_gpu_direct.py  test_poincare.py  test_poincare_ops.py  transform.py  transform_embedding_test.py
(+4 files in other folders)
