[package]
name = "reality_stone"
version = "0.2.0"
authors = ["donghwanyeom <donghwanyeom@gmail.com>"]
edition = "2021"
description = "High-performance hyperbolic neural networks library"
license = "MIT"
repository = "https://github.com/jigglypop/reality_stone"

[lib]
name = "reality_stone"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
numpy = "0.20"

# Math and array operations
ndarray = { version = "0.15", features = ["rayon"] }
num-traits = "0.2"
num-complex = "0.4"
nalgebra = "0.32"

# Performance
rayon = "1.8"
parking_lot = "0.12"

# Utils
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
