[package]
name = "reality_stone"
version = "0.2.0"
edition = "2021"
authors = ["jigglypop <donghwanyeom@gmail.com>"]
description = "High-performance hyperbolic neural networks library powered by Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jigglypop/reality_stone"
keywords = [
    "hyperbolic",
    "neural-networks",
    "deep-learning",
    "manifold-learning",
    "rust",
]

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
ndarray = { version = "0.15", features = ["rayon", "approx"] }
numpy = "0.20.0"
rayon = "1.8.0"
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
simba = "0.8"
approx = "0.4.0"
anyhow = "1.0"
thiserror = "1.0"
ndarray-rand = "0.15.0"
rand = "0.8.5"
libc = "0.2"
rustfft = "6.4.0"

[build-dependencies]
cc = "1.0"
glob = "0.3"

[features]
cuda = []
