[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "reality_stone"
version = "0.2.0"
description = "High-performance hyperbolic neural networks library powered by Rust"
authors = [{name = "jigglypop", email = "donghwanyeom@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["hyperbolic", "neural-networks", "deep-learning", "manifold-learning", "rust"]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/jigglypop/reality_stone"
Documentation = "https://github.com/jigglypop/reality_stone"
Repository = "https://github.com/jigglypop/reality_stone"
Issues = "https://github.com/jigglypop/reality_stone/issues"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "reality_stone._rust"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
